# ARIA

./: .gitignore  GOOGLE_WORKSPACE_FIX.md  IMPLEMENTATION_SUMMARY.md  PM2_MONITORING_SETUP.md  aria-monitor.bat  aria-monitor.ps1  aria-start.bat  check_db.js  check_native_db.js  create-pm2-task.ps1  decision-log-1.1.md  dev.native.db  diagnostic_verbose.js  ecosystem.config.js  ensure-pm2.bat  inject-token.ts  install-pm2-monitoring.ps1  package-lock.json  preview-dark.html  preview-light.html  preview-reports.html  register-pm2-task-admin.ps1  render.yaml  sherlock.db  start-aria.bat  start-aria.ps1  start-dev.ps1  test-calendar.ts  test-pm2-monitoring.ps1  validate_api_live.js  validate_api_native.js
sherlock/: export_cookies.py  login_helper.py  pyproject.toml  sherlock.db  test_output.txt
sherlock/.github/workflows/: sherlock-daily.yml
sherlock/reports/: report_2026-03-26T14-50-46.json  report_2026-03-26T14-58-10.json  report_2026-03-26T15-00-20.json  report_2026-03-26T21-06-45.json  report_2026-03-26T21-18-02.json  report_2026-03-26T21-31-14.json  report_2026-03-27T23-18-14-980Z_chgooa.json  report_2026-03-28T00-47-18-095Z_fqxls5.json
sherlock/sessions/: playwright_cookies.json
sherlock/src/: instagram_research.py  main.py  session_health.py  sherlock.db
sherlock/src/api/: app.py
sherlock/src/logic/: deduplication.py  retry.py  session.py  strategist.py  telegram.py
sherlock/src/scrapers/: _chrome.py  base.py  g1.py  gtrends.py  instagram.py  reddit.py  tiktok.py  (+2 more)
trendmaster/: Dockerfile  pyproject.toml  trendmaster.db
trendmaster/src/: main.py
(+769 files in other folders)
